# energex

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ASSESSMENT.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  energy.db  hello.py  pyproject.toml  stocks.db  test_phase_1_3.py  test_phase_4.py
.github/workflows/: ci.yml  docs.yml  publish.yml
deploy/dagster/: dagster.yaml  workspace.yaml
deploy/minio/: arctic-rw.json
docs/: 2026-06-18-s4-frontend-experience-design.md  TESTING.md
docs/superpowers/notes/: 2026-06-16-phase0-findings.md
docs/superpowers/plans/: 2026-06-16-energex-s1-foundation.md
docs/superpowers/specs/: 2026-06-16-energex-unified-platform-design.md
observer-web/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
observer-web/e2e/: explorer.spec.ts  login.spec.ts
observer-web/src/: proxy.ts
observer-web/src/app/: globals.css  layout.tsx
observer-web/src/app/(app)/: layout.tsx  page.tsx
observer-web/src/app/(app)/catalog/: page.tsx
observer-web/src/app/api/observer/[...path]/: route.ts
observer-web/src/app/login/: page.tsx
observer-web/src/components/: as-of-slider.tsx  broken-rail.tsx  catalog-tree-client.tsx  catalog-tree.tsx  four-v-tiles.tsx  freshness-heatmap.tsx  nav-rail-active.tsx  nav-rail.tsx  quality-panel.tsx  series-chart.tsx  symbol-detail.tsx  symbol-tabs.tsx
observer-web/src/components/__tests__/: as-of-slider.test.tsx  broken-rail.test.tsx  catalog-tree.test.tsx  four-v-tiles.test.tsx  nav-rail.test.tsx  quality-panel.test.tsx  series-chart.test.tsx
observer-web/src/lib/: api.ts
observer-web/src/lib/supabase/: server.ts
scripts/: phase0_minio_smoke.py  phase0_version_addressing.py
src/energex/: __init__.py  config.py  data_fetcher.py  database.py  exceptions.py  llm_providers.py  logging_config.py  main.py  news_fetcher.py  rate_limiter.py
src/energex/analysis/: __init__.py  dated_futures.py  futures.py  market_sentiment.py  quality.py  volatility.py
src/energex/core/: __init__.py  config.py  exceptions.py  quality.py  rate_limiter.py  schemas.py  storage.py  symbology.py
src/energex/core/connectors/: __init__.py  base.py  eia.py  eia930.py  ercot.py  fred.py  weather.py  yfinance.py
src/energex/observer/: app.py  arctic.py  auth.py  config.py  dagster_client.py  health.py  metadata.py  metrics.py  quality_service.py  schema_map.py  supabase_client.py
src/energex/observer/routers/: catalog.py  meta.py  metrics.py  symbol.py
src/energex/orchestration/: __init__.py  assets.py  checks.py  definitions.py  partitions.py  reconcile.py  resources.py  schedules.py  sensors.py
src/energex/service/: __init__.py  app.py  pipeline.py  readapi.py  scheduler.py
src/energex/sources/: __init__.py  base.py  stubs.py  yfinance_source.py
src/energex/visualization/: __init__.py  charts.py
src/examples/: 00_setup_data.py  00_setup_data_historical.py  01_data_quality_analysis.py  02_volatility_analysis.py  03_futures_analysis.py  04_sentiment_analysis.py  README.md  data_fetch.ipynb
supabase/migrations/: 0001_observer_rbac.sql
tests/: conftest.py  test_api_contract.py  test_charts.py  test_config.py  test_connector_eia.py  test_connector_eia930.py  test_connector_ercot.py  test_connector_fred.py  test_connector_weather.py  test_connector_yfinance.py  test_core_config_settings.py  test_core_exceptions.py  test_core_has_no_framework_imports.py  test_core_layout.py  test_crash_safety.py  test_data_fetcher.py  test_database.py  test_database_ergonomics.py  test_dated_contracts.py  test_dated_futures.py  test_definitions_load.py  test_exceptions.py  test_futures.py  test_latest_is_committed.py  test_llm_factory.py  test_main.py  test_news_article.py  test_news_fetcher.py  test_observer_auth.py  test_observer_catalog.py  test_observer_dagster_client.py  test_observer_metadata.py  test_observer_metrics.py  test_observer_quality.py  test_observer_supabase_client.py  test_observer_symbol.py  test_pandera_schemas.py  test_pointintime_reverse_backfill.py  test_quality.py  test_quality_collision.py  (+15 more)
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: architecture.md  data-sources-connectors.md  deployment.md  frontend-integration.md  intro.md  operations.md  orchestration.md  quickstart.md  roadmap.md  storage-point-in-time.md  testing.md
