[project]
name = "energex"
version = "0.4.0"
description = "Self-hosted, always-on energy-market data platform with a bitemporal (point-in-time-correct) store of record"
authors = [
    {name = "Marty H", email = "oldhero5@proton.me"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "PolyForm-Noncommercial-1.0.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "yfinance>=0.2.35",
    "duckdb>=0.9.0",
    "pytz>=2024.1",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0"
]

llm = [
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0"
]

sentiment = [
    "energex[llm]",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0"
]

service = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "apscheduler>=3.10.0,<4.0.0"
]

orchestration = [
    "dagster>=1.13.9,<1.14.0",
    "dagster-webserver>=1.13.9,<1.14.0",
    "dagster-postgres>=0.29.9,<0.30.0"
]

storage = [
    "arcticdb>=6.18.1,<7.0.0",
    "pandas>=2.0"
]

quality = [
    "pandera>=0.20.0",
    "numpy>=1.24.0"
]

graph = [
    "neo4j>=5.20.0"
]

all = [
    "energex[dev]",
    "energex[llm]",
    "energex[sentiment]",
    "energex[service]",
    "energex[orchestration]",
    "energex[storage]",
    "energex[quality]",
    "energex[graph]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship only the package; the sibling src/examples must not leak into the wheel.
packages = ["src/energex"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/examples/*.py" = ["T201", "C408"]  # Allow print() and dict() in examples
"**/test_*.py" = ["T201"]  # Allow print() in test files

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "plotly.*",
    "duckdb.*",
    "feedparser.*",
    "bs4.*",
    "pytz",
    "requests.*",
    "apscheduler.*",
    "arcticdb.*",
    "dagster.*",
    "pandera.*",
    "neo4j.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=energex --cov-report=term-missing"